# interpretations

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  fly.toml  play.py  pyproject.toml
.claude/projects/-Users-kennethreitz-repos-interpretations/memory/: MEMORY.md  feedback_commit_every_change.md  feedback_taj_mahal_drums.md  feedback_volume_compressor.md  project_interpretations_album.md  user_kenneth_music.md
site/: embed.html  index.html  manifest.json  oembed.json
tracks/: 2am.py  acid_reign.py  an_exception_occurred.py  apex.py  beast_mode.py  cathedral.py  chakra.py  culture_clash.py  deep_time.py  echo_chamber.py  emergence.py  ghost_protocol.py  gravity.py  infinite_spark.py  intrusive.py  monsoon_bass.py  music_box_factory.py  raga_midnight.py  shruti_lofi.py  silk_road.py  sleight_of_hand.py  tape_memory.py  the_dialogue.py  the_interruption.py  the_observatory.py  the_temple.py  voices.py  voltage.py  waveforms.py
