[project]
name = "interpretations"
version = "0.1.0"
description = "An album of compositions written in Python using pytheory."
license = "ISC"
authors = [
    { name = "Kenneth Reitz", email = "me@kennethreitz.org" },
]
requires-python = ">=3.10"
dependencies = [
    "pytheory>=0.41.3",
]

[tool.uv]
python-preference = "only-managed"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["play"]

[project.scripts]
play = "play:main"

[project.urls]
Repository = "https://github.com/kennethreitz/interpretations"
